--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -6,10 +6,14 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Movie</dt>
-      <dd><%= @character.movie_id %></dd>
+    <a href="/movies/<%= @character.movie_id %>">
+        <%= Movie.find_by(:id => @character.movie_id).title %></dd>
+      </a>
 
       <dt>Actor</dt>
-      <dd><%= @character.actor_id %></dd>
+      <a href="/actors/<%= @character.actor_id %>">
+          <%= Actor.find_by(:id => @character.actor_id).name %></dd>
+        </a>
 
       <dt>Name</dt>
       <dd><%= @character.name %></dd>
