--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -12,10 +12,10 @@
       <dd><%= @actor.dob %></dd>
 
       <dt>Bio</dt>
-      <dd><%= @actor.bio %></dd>
+      <dd><%= truncate(@actor.bio) %></dd>
 
-      <dt>Image url</dt>
-      <dd><%= @actor.image_url %></dd>
+      <dt>Image</dt>
+      <dd><img src="<%= @actor.image_url %>"></dd>
 
     </dl>
 
@@ -32,3 +32,9 @@
     </div>
   </div>
 </div>
+
+<ul>
+<% Movie.where(:id => @actor.id).each do |movie| %>
+<li><a href="/movies/<%= movie.id %>"><%= movie.title %></a></li>
+<% end %>
+</ul>
