--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -17,13 +17,14 @@
       <dt>Description</dt>
       <dd><%= @movie.description %></dd>
 
-      <dt>Image url</dt>
-      <dd><%= @movie.image_url %></dd>
+      <dt>Image</dt>
+      <dd><img src="<%= @movie.image_url %>"></dd>
 
       <dt>Director</dt>
       <dd>
         <a href="/directors/<%= @movie.director_id %>">
-          <%= Director.find_by(:id => @movie.director_id).name %></dd>
+          <!-- <%= Director.find_by(:id => @movie.director_id).name %></dd> -->
+          <%= @movie.director.name %>
         </a>
 
         <dt>Number of characters in movie</dt>
